fixed figure height bleed

--- a/_sass/_frontlines.scss
+++ b/_sass/_frontlines.scss
@@ -1124,7 +1124,7 @@ body p+p {
 .Card__figure {
     width: 100%;
     height: 18.75rem;
-    min-height: 20rem;
+    min-height: 18.75rem;
     background-color: #fff;
     background-size: cover;
     background-position: 50%
